pacman/templates/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pacman.dvoc24.v3nc.org
spec:
  parentRefs:
    - name: gateway
      namespace: gateway-envoy
  hostnames:
    - pacman.dvoc24.v3nc.org
  rules:
    - backendRefs:
        - name: pacman
          port: 80
